# school-html

./: .gitignore  Cargo.toml  Dioxus.toml
.github/workflows/: main.yml
public/: animations.css  fonts.css  shim.js  tailwind.css  tailwind.gen.css
src/: main.rs  utils.rs
src/bakery/: page.rs  scripts.rs
src/gym/: mod.rs  page.rs  scripts.rs
